--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbie's Game Hub</title>
+    <title>Kandama's Game Hub</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Load Tone.js for audio -->
@@ -185,7 +185,7 @@
 
         <!-- Header -->
         <header class="bg-barbie-pink text-barbie-header p-5 text-center sticky top-0 z-10 shadow-md">
-            <h1 class="text-2xl font-bold tracking-wide">Barbie's Game Hub</h1>
+            <h1 class="text-2xl font-bold tracking-wide">Kandama's Game Hub</h1>
         </header>
 
         <!-- Main Game Grid -->
