--- a/home.html
+++ b/home.html
@@ -416,7 +416,7 @@
         <div class="flex items-center mb-6">
             <img src="https://loremflickr.com/320/320/barbie,avatar/all" alt="Profile Avatar" class="w-16 h-16 rounded-full border-4 border-barbie-pink mr-4" onerror="this.src='https://placehold.co/128x128/fce4ec/c2185b?text=Avatar'">
             <div>
-                <h2 class="text-2xl font-bold text-barbie-dark">BarbieFan123</h2>
+                <h2 class="text-2xl font-bold text-barbie-dark">Papu Devate Kandama</h2>
                 <p class="text-sm">Welcome back, let's play!</p>
             </div>
         </div>
