--- a/home.html
+++ b/home.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -359,13 +360,22 @@
                     <span class="text-xs font-medium mt-1">Arcade</span>
                 </a>
 
-                <!-- Nav Item 3: The MIDDLE "Play" Button - EDITED ICON -->
-                <a href="#" class="flex items-center justify-center bg-play-btn text-white w-16 h-16 rounded-full -mt-10 shadow-xl border-4 border-white transform transition-transform hover:scale-110 duration-300 pulse-animate">
-                    <!-- NEW ICON: Sparkle (Solid) -->
-                    <svg class="w-8 h-8" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
-                        <path d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.25 12L17.438 14.846a4.5 4.5 0 01-3.09 3.09L11.5 18.75l.813-2.846a4.5 4.5 0 013.09-3.09L18.25 12z" />
-                    </svg>
+                <!-- 
+                  Nav Item 3: The MIDDLE "Logo" Button - UPDATED 
+                  - Larger size (w-24 h-24)
+                  - Lifted up by half its height (-mt-12)
+                  - Contains a round, full-cover image
+                -->
+                <a href="#" class="flex items-center justify-center bg-gray-200 text-white w-20 h-20 rounded-full -mt-12 shadow-xl border-4 border-white transform transition-transform hover:scale-110 duration-300 pulse-animate overflow-hidden">
+                    <!-- UPDATED: Image instead of SVG -->
+                    <img 
+                        src="images/middle-logo.jpg" 
+                        alt="App Logo" 
+                        class="w-full h-full object-cover rounded-full"
+                        onerror="this.src='https://placehold.co/96x96/E0E0E0/7F7F7F?text=Logo'"
+                    />
                 </a>
+
 
                 <!-- Nav Item 4: Rewards (new icon) -->
                 <!-- EDITED: Added id="rewards-button" -->
@@ -817,3 +827,4 @@
     </script>
 </body>
 </html>
+
