--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <form id="login-form" class="space-y-6">
             <div>
                 <label for="user-name" class="block text-sm font-medium text-gray-700 mb-1">Your Name</label>
-                <input type="text" id="user-name" class="login-input w-full" placeholder="e.g., Barbie" required>
+                <input type="text" id="user-name" class="login-input w-full" placeholder="e.g., Barbie Kandama" required>
             </div>
             
             <div>
                 <label for="pet-name" class="block text-sm font-medium text-gray-700 mb-1">Your Pet's Name</label>
-                <input type="text" id="pet-name" class="login-input w-full" placeholder="e.g., Taffy" required>
+                <input type="text" id="pet-name" class="login-input w-full" placeholder="e.g., Cutie" required>
             </div>
             
             <button type="submit" class="login-button w-full">Let's Play!</button>
@@ -101,4 +101,5 @@
     </script>
 
 </body>
+
 </html>
